--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,18 +4,19 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="14" />
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
 
     <application
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light">
         <activity
-            android:name=".PookActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
