--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,8 +12,10 @@
     </uses-permission>
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/icon"
-        android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light">
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Holo.Light" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
